--- a/CarWechat/templates/base.html
+++ b/CarWechat/templates/base.html
@@ -5,56 +5,78 @@
     <!--Import Google Icon Font-->
     <link href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">
     <!--Import materialize.css-->
-    <link href="https://cdn.bootcss.com/materialize/0.100.2/css/materialize.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/weui/1.1.2/style/weui.min.css" rel="stylesheet">
+    <link href="{{ url_for('static',filename='css/weui-extension.min.css') }}" rel="stylesheet">
+
     <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css') }}">
     {% block css %}{% endblock %}
     <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
 </head>
 
 <body>
-<nav>
-    <div class="nav-wrapper blue lighten-2">
-
-        <a href="#" class="brand-logo"><i class="material-icons">home</i>通力汽车{{current}}</a>
-        {% if current_user.is_authenticated %}
-
-        <img src="{{imgDomain}}{{ current_user.img }}" alt="Contact Person" class="circle head"
-             data-activates="slide-out" id="headimg">
-        <!--<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>-->
-        {% else %}
-        <p>未登录</p>
-        {% endif %}
-        <ul id="slide-out" class="side-nav">
-            <li>
-                <div class="userView">
-                    <div class="background">
-                        <img src="{{ url_for('static',filename='img/background.png') }}">
-                    </div>
-                    <a href="#!user"><img class="circle" src="{{imgDomain}}{{ current_user.img }}"></a>
-                    <a href="#!name"><span class="white-text name">{{current_user.name}}</span></a>
-                </div>
-            </li>
-            <li><a href="{{ url_for('web.selectCar') }}"><i class="material-icons">shopping_cart</i>去租车</a> </li>
-            <li><a href="{{ url_for('web.order') }}"><i class="material-icons">view_list</i>看订单</a> </li>
-            <!--<li>-->
-                <!--<div class="divider"></div>-->
-            <!--</li>-->
-            <!--<li><a class="subheader">子标题</a></li>-->
-            <!--<li><a class="waves-effect" href="#!">带波纹效果的第三链接</a></li>-->
-        </ul>
-
+<div class="weui-tab">
+    <div class="weui-tab__panel">
+        {% block content %}{% endblock %}
     </div>
-
-</nav>
-{% block content %}{% endblock %}
+    <div class="weui-tabbar">
+        <a href="{{ url_for('web.selectCar') }}" class="weui-tabbar__item" id="nav-select">
+            <img src="{{ url_for('static',filename='img/出租车.png') }}" alt="" class="weui-tabbar__icon">
+            <p class="weui-tabbar__label">租车</p>
+        </a>
+        <a href="{{ url_for('web.order') }}" class="weui-tabbar__item" id="nav-order">
+            <img src="{{ url_for('static',filename='img/订单.png') }}" alt="" class="weui-tabbar__icon">
+            <p class="weui-tabbar__label">订单</p>
+        </a>
+        <a href="javascript:;" class="weui-tabbar__item" id="nav-profile">
+            <img src="{{ url_for('static',filename='img/个人中心.png') }}" alt="" class="weui-tabbar__icon">
+            <p class="weui-tabbar__label">我</p>
+        </a>
+    </div>
+</div>
+{#<nav>#}
+{#    <div class="nav-wrapper blue lighten-2">#}
+{##}
+{#        <a href="#" class="brand-logo"><i class="material-icons">home</i>通力汽车{{current}}</a>#}
+{#        {% if current_user.is_authenticated %}#}
+{##}
+{#        <img src="{{imgDomain}}{{ current_user.img }}" alt="Contact Person" class="circle head"#}
+{#             data-activates="slide-out" id="headimg">#}
+{#        <!--<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>-->#}
+{#        {% else %}#}
+{#        <p>未登录</p>#}
+{#        {% endif %}#}
+{#        <ul id="slide-out" class="side-nav">#}
+{#            <li>#}
+{#                <div class="userView">#}
+{#                    <div class="background">#}
+{#                        <img src="{{ url_for('static',filename='img/background.png') }}">#}
+{#                    </div>#}
+{#                    <a href="#!user"><img class="circle" src="{{imgDomain}}{{ current_user.img }}"></a>#}
+{#                    <a href="#!name"><span class="white-text name">{{current_user.name}}</span></a>#}
+{#                </div>#}
+{#            </li>#}
+{#            <li><a href="{{ url_for('web.selectCar') }}"><i class="material-icons">shopping_cart</i>去租车</a> </li>#}
+{#            <li><a href="{{ url_for('web.order') }}"><i class="material-icons">view_list</i>看订单</a> </li>#}
+{#            <!--<li>-->#}
+{#                <!--<div class="divider"></div>-->#}
+{#            <!--</li>-->#}
+{#            <!--<li><a class="subheader">子标题</a></li>-->#}
+{#            <!--<li><a class="waves-effect" href="#!">带波纹效果的第三链接</a></li>-->#}
+{#        </ul>#}
+{##}
+{#    </div>#}
+{##}
+{#</nav>#}
+{#{% block content %}{% endblock %}#}
 {% block modal %}
 
 {% endblock %}
 <!--Import jQuery before materialize.js-->
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
 
-<script src="https://cdn.bootcss.com/materialize/0.100.2/js/materialize.min.js"></script>
+{#<script src="https://cdn.bootcss.com/materialize/0.100.2/js/materialize.min.js"></script>#}
 <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
 {% block script %}{% endblock %}
 </body>
