--- a/CarWechat/templates/car/repay.html
+++ b/CarWechat/templates/car/repay.html
@@ -25,6 +25,55 @@
     </style>
 {% endblock %}
 {% block content %}
+    <div class="weui-wepay-details">
+        <div class="weui-wepay-details__hd">
+            <div class="weui-wepay-details__state">
+                <h2 class="weui-wepay-details__title">
+                    {% if data.status=="ok" %}
+                        <i class="weui-wepay-details__icon weui-icon-success"></i>
+
+                    {% endif %} {{ orderConfig[data.status][0] }}</h2>
+                <p class="weui-wepay-details__desc">￥{{ data.totalfee/100 }}</p>
+            </div>
+        </div>
+        <div class="weui-wepay-details__bd">
+            <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">单号：</div>
+                <div class="weui-wepay-detail__ft">{{ data.tradeno |cutstring }}</div>
+            </div>
+            <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">时间：</div>
+                <div class="weui-wepay-detail__ft">{{ data.created_at }}</div>
+            </div>
+            <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">订单状态：</div>
+                <div class="weui-wepay-detail__ft">{{ orderConfig[data.status][0] }}</div>
+            </div>
+            <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">车型：</div>
+                <div class="weui-wepay-detail__ft">{{ data.Cartype.name }}</div>
+            </div>
+            <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">天数：</div>
+                <div class="weui-wepay-detail__ft">{{ data.count }}</div>
+            </div>
+            <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">折扣：</div>
+                <div class="weui-wepay-detail__ft">-￥{{ data.cutfee/100 }}</div>
+            </div>
+            <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">总价：</div>
+                <div class="weui-wepay-detail__ft weui-wepay-color-green">￥{{ data.totalfee/100 }}</div>
+            </div>
+
+        </div>
+        {% if data.status=="ok" %}
+            <div class="weui-wepay-details__ft">
+                <a href="javascript:;" class="weui-btn weui-btn_primary" id="refund">申请退款</a>
+            </div>
+
+        {% endif %}
+    </div>
     <div class="container">
         <div class="col s12 m6 l4">
 
@@ -35,8 +84,8 @@
 
                         <tbody>
                         <tr>
-                            <td >订单编号</td>
-                            <td>{{ data.tradeno |cutstring}}</td>
+                            <td>订单编号</td>
+                            <td>{{ data.tradeno |cutstring }}</td>
                         </tr>
                         <tr>
                             <td>订单状态</td>
