--- a/CarWechat/templates/car/sign.html
+++ b/CarWechat/templates/car/sign.html
@@ -7,81 +7,107 @@
     </style>
 {% endblock %}
 {% block content %}
-    <div class="container z-depth-3 col s10  m8 l6 offset-s1 offset-l3 offset-m2">
-        <div class="row">请完善个人信息</div>
-        <div class="row">
-            <div class="col s12">
-                <div class="row">
-                    <div class="input-field ">
-                        <input placeholder="请输入您的真实姓名" id="name" type="text" class="validate">
-                        <label for="name">姓名</label>
-                    </div>
+    <div class="weui-cells__title">完善个人信息</div>
+    <div class="weui-cells weui-cells_form">
+        <div class="weui-cell">
+            <div class="weui-cell__hd"><label class="weui-label">姓名</label></div>
+
+                <div class="weui-cell__bd">
+                    <input id="name" class="weui-input" type="text" placeholder="请输入真实姓名"/>
                 </div>
-                <div class="row">
-                    <div class="input-field ">
-                        <div class="row">
-                            <div class="col s2">
-                                <label for="driveage">驾龄</label>
-                            </div>
 
-                            <div class="range-field col s10">
-                                <input type="range" min="0" max="100" id="driveage"/>
-
-                            </div>
+        </div>
+        <div class="weui-cell">
+            <div class="weui-cell__hd"><label class="weui-label">驾龄</label></div>
+            <div class="weui-cell__bd">
+                <div class="weui-slider-box">
+                    <div class="weui-slider">
+                        <div class="weui-slider__inner">
+                            <div style="width: 50%;" class="weui-slider__track"></div>
+                            <div style="left: 50%;" class="weui-slider__handler"></div>
                         </div>
+                    </div>
+                    <div class="weui-slider-box__value" id="driveage">5</div>
+                </div>
+            </div>
+        </div>
+        <div class="weui-cell">
+            <div class="weui-cell__hd"><label class="weui-label">身份证 </label></div>
 
+                <div class="weui-cell__bd">
+                    <input id="idCode" class="weui-input" type="text" placeholder="请输入身份证号码"/>
+                </div>
 
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field ">
-                        <input id="password" type="password" class="validate" placeholder="不小于六位的密码">
-                        <label for="password">密码</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field ">
-                        <input id="confirm-password" type="password" class="validate" placeholder="不小于六位的密码">
-                        <label for="confirm-password">确认密码</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field ">
-                        <input id="idCode" type="text" class="validate" placeholder="输入您的身份证号">
-                        <label for="idCode">身份证号</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s9 m9 l10">
-                        <input id="phone" type="tel" class="validate">
-                        <label data-error="输入错误" for="phone">联系人电话</label>
+        </div>
+        <div class="weui-cell weui-cell_vcode">
+            <div class="weui-cell__hd">
+                <label class="weui-label">手机号</label>
+            </div>
+            <div class="weui-cell__bd">
+                <input class="weui-input" type="tel" id="phone">
+            </div>
+            <div class="weui-cell__ft">
+                <a href="javascript:;" class="weui-vcode-btn" id="getvCode">获取验证码</a>
+            </div>
+        </div>
 
-                    </div>
-                    <div class="col s3 m3 l2">
-                        <a class="btn-floating btn-middle red" style="text-align: center" id="getvCode">
-                            验证</a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field">
-                        <input id="vCode" type="number" class="validate">
-                        <label data-error="输入错误" for="vCode" id="vCodeLable1">短信验证码</label>
-                    </div>
-                </div>
-                <div class="row" align="center">
-
-                    <button class="btn waves-effect waves-light lighten-2" id="newProfile">
-                        <i class="material-icons right">send</i>注册
-                    </button>
-
-                </div>
+        <div class="weui-cell weui-cell_vcode">
+            <div class="weui-cell__hd"><label class="weui-label" id="vCodeLable1">验证码</label></div>
+            <div class="weui-cell__bd">
+                <input class="weui-input" type="number" id="vCode" placeholder="请输入验证码"/>
             </div>
         </div>
     </div>
 
+
+
+    <label for="weuiAgree" class="weui-agree">
+        <input id="weuiAgree" type="checkbox" class="weui-agree__checkbox">
+        <span class="weui-agree__text">
+        阅读并同意<a href="javascript:void(0);">《相关条款》</a>
+    </span>
+    </label>
+
+    <div class="weui-btn-area">
+        <a class="weui-btn weui-btn_primary" href="javascript:" id="newProfile">确定</a>
+    </div>
+
+
 {% endblock %}
 {% block script %}
     <script>
+        $(function () {
+            var $sliderTrack = $('.weui-slider__track'),
+                $sliderHandler = $('.weui-slider__handler'),
+                $sliderValue = $('.weui-slider-box__value');
+
+            var totalLen = $('.weui-slider__inner').width(),
+                startLeft = 0,
+                startX = 0;
+
+            $sliderHandler
+                .on('touchstart', function (e) {
+                    startLeft = parseInt($sliderHandler.css('left')) * totalLen / 100;
+                    startX = e.changedTouches[0].clientX;
+                })
+                .on('touchmove', function (e) {
+                    var dist = startLeft + e.changedTouches[0].clientX - startX,
+                        percent;
+                    dist = dist < 0 ? 0 : dist > totalLen ? totalLen : dist;
+                    percent = parseInt(dist / totalLen * 100);
+                    $sliderTrack.css('width', percent + '%');
+                    $sliderHandler.css('left', percent + '%');
+                    if (Math.ceil(percent / 10) == 10) {
+                        $sliderValue.text(Math.ceil(percent / 10) + "+");
+                    } else {
+                        $sliderValue.text(Math.ceil(percent / 10));
+                    }
+
+
+                    e.preventDefault();
+                })
+            ;
+        });
         var IdCode = {
 
             getIdCode: function (phone) {
@@ -101,46 +127,58 @@
             refreshTime: function () {
                 IdCode.time -= 1;
                 console.log(IdCode.time);
-                $(IdCode.targetLable).text(IdCode.time + "秒后可重新获取");
+                $(IdCode.targetButton).text(IdCode.time + "秒");
                 if (IdCode.time == 0) {
                     clearInterval(IdCode.timer);
                     $(IdCode.targetButton).removeAttr('disabled');
-                    $(IdCode.targetLable).text("输入验证码");
+                    $(IdCode.targetButton).text("获取验证码");
                 }
             }
         };
         $(document).ready(function () {
             $('#getvCode').click(function () {
                 re = /^1\d{10}$/;
-                if (re.test($('#phone').val())) {
-                    var idCodeObj1 = IdCode;
+                if (re.test($('#phone').val()) ) {
+                    if($('#getvCode').attr('disabled')!="disabled"){
+                                            var idCodeObj1 = IdCode;
                     idCodeObj1.targetLable = '#vCodeLable1';
                     idCodeObj1.targetButton = '#getvCode';
                     idCodeObj1.getIdCode($('#phone').val());
+                    }
+
                 }
                 else {
-                    $('#phone').addClass('invalid')
+                    $('#phone').parent().parent().addClass('weui-cell_warn')
                 }
 
             });
             $('#newProfile').click(function () {
+                if (!$("#weuiAgree").prop("checked")){
+                    return
+                }
                 if (!$('#vCode').val()) {
-                    $('#vCode').addClass('invalid')
+                    $('#vCode').parent().parent().addClass('weui-cell_warn')
                 }
                 else {
                     if ($('#password').val() != $('#confirm-password').val()) {
-                        alert("密码输入不一致")
-                        $('#password').addClass('invalid')
-                        $('#confirm-password').addClass('invalid')
+                        alert("密码输入不一致");
+                        $('#password').parent().parent().addClass('weui-cell_warn');
+                        $('#confirm-password').parent().parent().addClass('weui-cell_warn')
                     }
                     else {
                         var formData = new FormData();
-                        formData.append('name', $('#name').removeClass('invalid').val());
-                        formData.append('driveage', $('#driveage').removeClass('invalid').val());
-                        formData.append('password', $('#password').removeClass('invalid').val());
-                        formData.append('idCode', $('#idCode').removeClass('invalid').val());
-                        formData.append('vCode', $('#vCode').removeClass('invalid').val());
-                        formData.append('phone', $('#phone').removeClass('invalid').val());
+
+                        formData.append('name', $('#name').removeClass('weui-cell_warn').val());
+                        formData.append('driveage', $('#driveage').parent().parent().removeClass('weui-cell_warn').text()*1);
+{#                        formData.append('password', $('#password').parent().parent().removeClass('weui-cell_warn').val());#}
+                        formData.append('idCode', $('#idCode').removeClass('weui-cell_warn').val());
+                        formData.append('vCode', $('#vCode').removeClass('weui-cell_warn').val());
+                        formData.append('phone', $('#phone').removeClass('weui-cell_warn').val());
+                        $('#name').parent().parent().removeClass('weui-cell_warn');
+                        $('#driveage').parent().parent().removeClass('weui-cell_warn');
+                        $('#idCode').parent().parent().removeClass('weui-cell_warn');
+                        $('#vCode').parent().parent().removeClass('weui-cell_warn');
+                        $('#phone').parent().parent().removeClass('weui-cell_warn');
                         $.ajax({
                             url: 'api/sign',
                             type: 'POST',
@@ -151,7 +189,7 @@
                                 if (result['status'] == 'lacked') {
                                     alert("信息填写有误");
                                     result['msg'].forEach(function (v, k) {
-                                        $('#' + v).removeClass('valid').addClass('invalid')
+                                        $('#' + v).parent().parent().addClass('weui-cell_warn')
                                     })
                                 }
 
