--- a/CarWechat/templates/base.html
+++ b/CarWechat/templates/base.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css') }}">
     {% block css %}{% endblock %}
     <!--Let browser know website is optimized for mobile-->
-
+    <script type="text/javascript" src="https://res.wx.qq.com/open/libs/weuijs/1.1.3/weui.min.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
 </head>
 
 <body>
 <div class="weui-tab">
-    <div class="weui-tab__panel">
+    <div class="weui-tab__panel" id="weui-tab__panel">
         {% block content %}{% endblock %}
     </div>
     <div class="weui-tabbar">
@@ -29,7 +29,11 @@
             <img src="{{ url_for('static',filename='img/订单.png') }}" alt="" class="weui-tabbar__icon">
             <p class="weui-tabbar__label">订单</p>
         </a>
-        <a href="javascript:;" class="weui-tabbar__item" id="nav-profile">
+        <a href="{{ url_for('web.map') }}" class="weui-tabbar__item" id="nav-map">
+            <img src="{{ url_for('static',filename='img/公交车站.png') }}" alt="" class="weui-tabbar__icon">
+            <p class="weui-tabbar__label">服务点</p>
+        </a>
+        <a href="{{ url_for('web.profile') }}" class="weui-tabbar__item" id="nav-profile">
             <img src="{{ url_for('static',filename='img/个人中心.png') }}" alt="" class="weui-tabbar__icon">
             <p class="weui-tabbar__label">我</p>
         </a>
