--- a/CarWechat/templates/car/orderDetail.html
+++ b/CarWechat/templates/car/orderDetail.html
@@ -100,10 +100,12 @@
             })
         }
         $(document).ready(function () {
+            navSelect($('#nav-order'));
+
             $('#refund').click(function () {
                 alert("暂不能申请退款，请联系客服");
                 {#                refund();#}
-            })
+            });
         });
 
     </script>
