--- a/CarWechat/templates/car/selectCar.html
+++ b/CarWechat/templates/car/selectCar.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block css %}
-<link href="https://cdn.bootcss.com/materialize/0.100.2/css/materialize.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/materialize/0.100.2/css/materialize.min.css" rel="stylesheet">
     <style>
 
 
@@ -12,65 +12,58 @@
 {% block content %}
 
 
-        <div class="weui-navbar">
-            <div class="weui-navbar__item weui-bar__item_on">
-                经济型
-            </div>
-            <div class="weui-navbar__item">
-                豪华型
-            </div>
+    <div class="weui-navbar" id="tab">
+
+        <div class="weui-navbar" id="tabitem">
+            {% for c in cat %}
+                <div class="weui-navbar__item" id="{{ c.id }}">{{ c.name }}</div>
+            {% endfor %}
         </div>
+        <div class="weui-tab__panel">
+            {% for c in cat %}
+                <div class="weui-tab__content">
 
-    <div class="row">
-        {% for d in data %}
+                    <div class="row">
+                        {% for d in data %}
+                            {% if d.carcatid == c.id %}
+                            <div class="col s6 m6">
+                                <div class="card">
+                                    <div class="card-image">
+                                        <img src="{{ imgDomain }}{{ d.img }}!fang">
 
+                                        <a href="{{ url_for('web.cart',id=d.id) }}"
+                                           class="btn-floating halfway-fab waves-effect waves-light blue lighten-1 addtocart"><i
+                                                class="material-icons"
+                                        >shopping_cart</i></a>
+                                    </div>
+                                    <div class="card-content">
+                                        <span class="card-title truncate">{{ d.name }}</span>
+                                        <p class="weui-wepay-color-red">{{ d.price/100 }}/天</p>
+                                    </div>
+                                </div>
 
-            <div class="col s6 m6">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="{{ imgDomain }}{{ d.img }}!fang">
+                            </div>
+                            {% endif %}
 
-                        <a href="{{ url_for('web.cart',id=d.id) }}"
-                           class="btn-floating halfway-fab waves-effect waves-light blue lighten-1 addtocart"><i
-                                class="material-icons"
-                        >shopping_cart</i></a>
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title truncate">{{ d.name }}</span>
-                        <p>{{ d.price/100 }}/天</p>
+                        {% endfor %}
                     </div>
                 </div>
-
-
-                <!--<div class="card horizontal">-->
-                <!--<div class="card-image">-->
-                <!--<img src="{{imgDomain}}{{ d.img }}!fang">-->
-                <!--</div>-->
-                <!--<div class="card-stacked">-->
-                <!--<div class="card-content">-->
-                <!--<p class="carTypeName">{{ d.name }}</p>-->
-                <!--</div>-->
-                <!--<div class="card-action row">-->
-                <!--<div class=" carTypePrice col s8 ">价格：{{d.price}}/天</div>-->
-                <!--<div class="col s4">-->
-                <!--<a href="#" class="addtocart btn-floating  waves-effect waves-light blue lighten-2 "><i-->
-                <!--class="material-icons">shopping_cart</i></a>-->
-                <!--</div>-->
-
-                <!--</div>-->
-                <!--</div>-->
-                <!--</div>-->
-            </div>
-
-
-        {% endfor %}
+            {% endfor %}
+        </div>
     </div>
+
 {% endblock %}
 {% block script %}
     <script>
-         $(document).ready(function () {
+        $(document).ready(function () {
+            weui.tab('#tab', {
+                defaultIndex: 0,
+                onChange: function (index) {
+                    console.log(index);
+                }
+            });
             navSelect($('#nav-select'));
-         });
+        });
 
         {#        $(".addtocart").click(function () {#}
         {#            alert("即将开启，请持续关注，敬请期待！!")#}
