--- a/CarAdmin/templates/admin/base.html
+++ b/CarAdmin/templates/admin/base.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     {% block page_body %}
-    <div class="container">
+    <div class="container" style="width: 100%">
       <nav class="navbar navbar-default" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
