--- a/CarWechat/templates/car/cart.html
+++ b/CarWechat/templates/car/cart.html
@@ -65,7 +65,7 @@
                 <div class="weui-cell__hd"><label class="weui-label">天数选择</label></div>
                 <div class="weui-cell__bd">
                     <input class="weui-input" type="number" placeholder="选择租赁天数" id="count" value="1"
-                           contenteditable="false">
+                           readonly>
                     {#                    <input id="count" class="z-depth-3" name="value" min="1" max="15">#}
                 </div>
             </div>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="weui-cell__bd">
                     <input class="weui-input" type="text" placeholder="选择最近的服务站" id="locpicker"
-                           contenteditable="false">
+                           readonly>
                 </div>
             </div>
         </div>
